Fix broken css

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_nestable.less
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_nestable.less
@@ -122,7 +122,7 @@
 
 .category-empty
 {
-	min-height: floor((@xf-fontSizeNormal) * 1.475 + 2 * (@xf-paddingMedium) + 2 * (@xf-borderSize));
+	min-height: floor((@xf-fontSizeNormal * 1.475 + 2 * @xf-paddingMedium + 2 * @xf-borderSize));
 }
 
 .category-dragel
